--- a/.godot/editor/project_metadata.cfg
+++ b/.godot/editor/project_metadata.cfg
@@ -1,6 +1,6 @@
 [editor_metadata]
 
-executable_path="E:/godotGames/Godot_v4.1.2-stable_win64.exe"
+executable_path="/private/var/folders/2r/6t19b8rn2f9_750hxrq2yd1m0000gn/T/AppTranslocation/C319C9A0-D529-4BDC-BAD0-FE750B2C60D4/d/Godot.app/Contents/MacOS/Godot"
 use_advanced_connections=false
 
 [debug_options]
@@ -23,8 +23,8 @@ CanvasGroup:scale=true
 
 [dialog_bounds]
 
-create_new_node=Rect2(510, 190, 900, 700)
-project_settings=Rect2(510, 190, 900, 700)
+create_new_node=Rect2(510, 190, 1670, 1106)
+project_settings=Rect2(510, 190, 1770, 1240)
 
 [script_setup]
 
@@ -34,3 +34,7 @@ last_selected_language="GDScript"
 
 scripts=["res://start_button.gd", "res://simple_circle_button.gd", "res://button_click.gd", "Node", "res://field.gd", "res://test_text.gd", "res://Button.gd"]
 scenes=["res://text.tscn"]
+
+[color_picker]
+
+recent_presets=PackedColorArray(1, 1, 0, 1, 1, 0, 0, 1, 0.00392157, 0, 0, 1)
