--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -19,18 +19,18 @@ dock_filesystem_split=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://")
+dock_filesystem_selected_paths=PackedStringArray("res://text.tscn")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
-dock_5="Inspector,Node,History"
+dock_5="Inspector,Node,History,Коммит (4)"
 
 [EditorNode]
 
 open_scenes=PackedStringArray("res://text.tscn")
 center_split_offset=-238
 selected_default_debugger_tab_idx=0
-selected_main_editor_idx=3
+selected_main_editor_idx=0
 current_scene="res://text.tscn"
 selected_bottom_panel_item=0
 
